# webinargeek_microservice

./: .flake8  .gitignore  Dockerfile  Eockerfile  Makefile  docker-compose.traefik.yml  docker-compose.yml  locker-compose.dev.yml  locker-compose.traefik.yml  locker-compose.yml  pyproject.toml  traefik.env
.github/workflows/: deploy.yml  linting.yml  test_secrets.yml
app/: list_broadcasts.py  main.py
app/docs/: description.txt  utils.py
app/lib/: list_broadcasts.py  types.py  utils.py
